Fix reading trace